--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-DebugToolbar==0.14.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+loguru==0.6.0
 MarkupSafe==1.1.1
+packaging==23.2
+PyYAML==6.0.1
+six==1.16.0
 Werkzeug==0.15.6
