--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-DebugToolbar==0.14.1
+Flask-SQLAlchemy==2.5.1
+greenlet==3.0.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 loguru==0.6.0
 MarkupSafe==1.1.1
 packaging==23.2
+platformdirs==4.1.0
+PyMySQL==1.1.0
 PyYAML==6.0.1
 six==1.16.0
+SQLAlchemy==1.4.23
+virtualenv==20.25.0
 Werkzeug==0.15.6
-flask-sqlalchemy==2.5.1
-sqlalchemy==1.4.23
-pymysql==0.9.3
+win32-setctime==1.1.0
