--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "ant-design-vue": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
