--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^4.1.0",
     "axios": "^1.6.5",
     "vue": "^3.3.11",
-    "ant-design-vue": "^4.1.0"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^5.0.10"
+    "vite": "^5.0.11"
   }
 }
