--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^4.1.0",
     "axios": "^1.6.5",
+    "mitt": "^3.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
