--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,11 @@
-FROM node:16-slim as builder
+FROM node:16-alpine as builder
 WORKDIR /app
 COPY package*.json ./
-
-RUN npm cache clean --force
-RUN npm install --loglevel=verbose
+RUN npm config set registry https://registry.npmmirror.com/
+RUN npm install --production --loglevel=verbose
 
 COPY . .
-
+RUN npm i
 RUN npm run build
 EXPOSE 5173
 
